Fix ibox overflow

--- a/webapp/src/main/webapp/iaf/gui/css/style.css
+++ b/webapp/src/main/webapp/iaf/gui/css/style.css
@@ -3840,6 +3840,8 @@ code {
   border-style: solid solid none;
   border-width: 1px 0;
   clear: both;
+  overflow: auto;
+  overflow: overlay;
 }
 .ibox-footer {
   color: inherit;
